--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@ body {
 
     <center> 
        <img src="https://c.top4top.io/p_3110ys7dn0.png" width="75%"><br>
-       <br> 
-
+ 
     <div class="container" id="main-page">
         <h1>Cek Khodam</h1>
         <h1><font size="5" color="white">Cek khodam anda sekarang!.</p>
@@ -129,6 +128,8 @@ body {
             <button type="submit">Cek</button>
         </form>
     </div>
+
+       <center><audio autoplay="autoplay" controls="controls" src="https://a.top4top.io/m_2876a3pt50.mp3"></audio></a></center>
 
     <div class="container" id="result-page" style="display: none;">
         <h1>Hasil Cek Khodam</h1>
@@ -189,4 +190,4 @@ body {
 </footer>
 
 </body>
-  </html>
+        </html>
