--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ body {
 
     <center> 
        <img src="https://c.top4top.io/p_3110ys7dn0.png" width="75%"><br>
- 
+       <br> 
+
     <div class="container" id="main-page">
         <h1>Cek Khodam</h1>
         <h1><font size="5" color="white">Cek khodam anda sekarang!.</p>
@@ -128,8 +129,6 @@ body {
             <button type="submit">Cek</button>
         </form>
     </div>
-
-       <center><audio autoplay="autoplay" controls="controls" src="https://a.top4top.io/m_2876a3pt50.mp3"></audio></a></center>
 
     <div class="container" id="result-page" style="display: none;">
         <h1>Hasil Cek Khodam</h1>
@@ -156,6 +155,8 @@ body {
         "Kodok sumatra",
         "Jembut kuyang",
         "Jambu mengkal",
+        "Ambaruwo",
+
     ];
 
         const form = document.querySelector('#khodamForm');
@@ -186,8 +187,8 @@ body {
         });
     </script>
     <footer>
-    <p>By <a href="https://t.me/@yzzyourfav" target="_blank">Grezz+</a>Xploit</p>
+    <p>By <a href="https://t.me/@yzzyourfav" target="_blank">Grezz+</a>Xploit</p><p>Follow Instagram <a href="https://www.instagram.com/ni4sss?igsh=MWYxa2VuZ3BqYzBpOA==" target="_blank">Admin</a></p>
 </footer>
 
 </body>
-        </html>
+  </html>
